chore: comment out "personal" section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div id="archive-root"></div>
 
         <!-- Personal Section -->
-        <div id="personal-root"></div>
+        <!-- <div id="personal-root"></div> -->
 
         <!-- Footer -->
         <div id="footer-root"></div>
