feat: complete redesign into a more simplistic website

--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="William Cagas - Software Engineering student at University of Waterloo. Building AcneCura and other highlights.">
+    <meta name="description" content="William Cagas - Software Engineering student at University of Waterloo. Building AI for good.">
     <title>William Cagas</title>
     <link rel="stylesheet" href="src/styles/main.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;500;600&display=swap" rel="stylesheet">
     <script>
       // Prevent flash of wrong theme
       (function() {
@@ -22,38 +18,10 @@
       })();
     </script>
 </head>
-
 <body>
-    <!-- Skip to main content for accessibility -->
-    <a href="#main-content" class="skip-link">Skip to main content</a>
-
-    <!-- Navigation -->
-    <div id="navbar-root"></div>
-
-    <!-- Main Content -->
-    <main id="main-content">
-        <!-- Hero Section -->
-        <div id="hero-root"></div>
-
-        <!-- About Section -->
-        <div id="about-root"></div>
-
-        <!-- Highlights Section -->
-        <div id="projects-root"></div>
-
-        <!-- Archive Section -->
-        <div id="archive-root"></div>
-
-        <!-- Personal Section -->
-        <!-- <div id="personal-root"></div> -->
-
-        <!-- Footer -->
-        <div id="footer-root"></div>
+    <main>
+        <div id="content-root"></div>
     </main>
-
-    <!-- JavaScript Modules -->
     <script type="module" src="src/js/main.js"></script>
 </body>
-
 </html>
-
